[package]
name = "particle-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
itertools = "0.12.0"
macroquad = "0.4.4"
ndarray = "0.15.6"
ordered-float = "4.1.0"
rand = "0.8.5"
rstest = "0.18.2"

[profile.release]
debug = true


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
